# biomodel

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 00_overview_for_beginners.md  01_design.md  02_individual_conditioning.md  03_related_work.md  04_evaluation.md  05_datasets.md  06_celllevel_and_mmd.md  07_realdata_pipeline.md  08_interaction_benchmark.md  09_identifiability_adversarial.md  10_onek1k_acquisition.md  11_advanced_extensions.md  12_running_demos.md
scripts/: benchmark_interactions.py  demo_dose_response.py  demo_interpret.py  demo_precision_medicine.py  demo_uncertainty.py  demo_validation.py  fetch_onek1k.py  make_figures.py  preprocess_onek1k.py  run_demo.py  run_demo_adversarial.py  run_demo_celllevel.py  run_demo_numpy.py
src/biomodel/: __init__.py  adversarial.py  cell_level.py  data_pipeline.py  dose.py  evaluate.py  interpret.py  losses.py  model.py  simulate.py  train.py  uncertainty.py  validation.py
tests/: test_adversarial.py  test_cell_level.py  test_data_pipeline.py  test_dose.py  test_interpret.py  test_losses.py  test_model.py  test_simulate.py  test_uncertainty.py  test_validation.py
